Solucion bug de niños por Usuario